...
    "applock.cover.deleteEverything": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete everything"
          }
        }
      }
    },
    "applock.cover.deleteFromThisDevice": {
      "extractionState": "manual",
...
    "applock.deleteEverything.confirm.title": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete everything?"
          }
        }
      }
    },
    "applock.deleteEverything.done.message": {
      "extractionState": "manual",
...
    "applock.deleteFromThisDevice.confirm.title": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete from this device?"
          }
        }
      }
    },
    "applock.deleteFromThisDevice.done.message": {
      "extractionState": "manual",
...
    "export.title": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Export"
          }
        }
      }
    },
    "export.from": {
      "extractionState": "manual",
...
    "export.makePDF": {
      "extractionState": "manual",
      "localizations": {
        "en-GB": {
          "stringUnit": {
            "state": "translated",
            "value": "Make PDF"
          }
        }
      }
    },
    "export.shareDisclosure": {
      "extractionState": "manual",
...
